--- a/konversi.html
+++ b/konversi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konversi Suhu Attiya</title>
     <!-- css link -->
-    <link rel="stylesheet" href="style/konversi.css" />
+    <link rel="stylesheet" href="konversi.css" />
 
     <!-- box icons -->
     <link rel="stylesheet"
@@ -53,6 +53,6 @@
         </div>
       </div>
     <!-- script tags -->
-    <script src="script/konversi.js"></script>
+    <script src="konversi.js"></script>
   </body>
 </html>
